welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: illegal start of simple expression
		while(!estSurBiscuit)[{
                                     ^